a few lines of code testing out other models

--- a/notebooks/data_exploration.ipynb
+++ b/notebooks/data_exploration.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "dense-employment",
+   "execution_count": 2,
+   "id": "hindu-envelope",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,27 +13,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "operational-dealer",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[Errno 2] No such file or directory: 'notebooks'\n",
-      "/Users/ceciliabarnes/Documents/DIRECT/afq-cnn/notebooks\n"
-     ]
-    }
-   ],
-   "source": [
-    "#cd notebooks"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "id": "pointed-fitness",
+   "execution_count": 3,
+   "id": "restricted-astronomy",
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +124,7 @@
        "4  0.985039  0.681806  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,8 +136,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "boxed-carrier",
+   "execution_count": 4,
+   "id": "external-meaning",
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +240,7 @@
        "4           4  subject_004   29    Male        NaN    NaN        NaN       NaN"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,8 +252,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "listed-calendar",
+   "execution_count": 5,
+   "id": "consecutive-jones",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,8 +262,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "cloudy-effects",
+   "execution_count": 6,
+   "id": "finished-melbourne",
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +284,7 @@
        "        0.68896431]])"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,8 +295,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "chronic-polymer",
+   "execution_count": 7,
+   "id": "modular-adoption",
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +309,7 @@
        "       50, 47, 46, 18, 40, 50, 40, 17, 17])"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -339,33 +320,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "stuffed-aluminum",
+   "execution_count": 25,
+   "id": "naked-camping",
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.linear_model import LassoCV\n",
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.impute import SimpleImputer\n",
-    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.model_selection import cross_val_score, train_test_split\n",
     "from groupyr.transform import GroupExtractor\n",
-    "from sklearn.ensemble import RandomForestClassifier"
+    "from sklearn.ensemble import RandomForestRegressor, AdaBoostRegressor"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "reduced-montana",
+   "execution_count": 19,
+   "id": "hairy-grove",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.21357297, 0.2898142 , 0.34087688, ..., 0.70245914, 0.70967451,\n",
+       "        0.73665818],\n",
+       "       [0.19058299, 0.2721342 , 0.32055065, ..., 0.72820305, 0.73652069,\n",
+       "        0.73947076],\n",
+       "       [0.24233305, 0.30895163, 0.37506668, ..., 0.70167013, 0.70817548,\n",
+       "        0.71672209],\n",
+       "       ...,\n",
+       "       [0.18992911, 0.24986252, 0.27899307, ..., 0.68931342, 0.69524343,\n",
+       "        0.70089865],\n",
+       "       [0.24526717, 0.31377051, 0.36500822, ..., 0.73162777, 0.73706813,\n",
+       "        0.73935197],\n",
+       "       [0.20669057, 0.2846074 , 0.33341608, ..., 0.72049506, 0.73640573,\n",
+       "        0.76009836]])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "group_extractor = GroupExtractor(select=['fa', 'md'], groups=groups, group_names=group_names)\n",
+    "#X = group_extractor.fit_transform(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "advisory-vatican",
    "metadata": {},
    "outputs": [],
    "source": [
-    "group_extractor = GroupExtractor(select=['fa', 'md'], groups=groups, group_names=group_names)\n",
-    "X = group_extractor.fit_transform(X)"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y)\n",
+    "#X"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "norwegian-accommodation",
+   "id": "brief-learning",
    "metadata": {},
    "source": [
     "### Lasso"
@@ -373,43 +388,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "fitted-separation",
+   "execution_count": 24,
+   "id": "legitimate-december",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/ceciliabarnes/opt/anaconda3/envs/direct_cnn/lib/python3.8/site-packages/sklearn/linear_model/_coordinate_descent.py:529: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations. Duality gap: 1.7625885448254088, tolerance: 0.9529409836065574\n",
-      "  model = cd_fast.enet_coordinate_descent(\n",
-      "/Users/ceciliabarnes/opt/anaconda3/envs/direct_cnn/lib/python3.8/site-packages/sklearn/linear_model/_coordinate_descent.py:529: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations. Duality gap: 1.234696397247653, tolerance: 0.9836209677419354\n",
-      "  model = cd_fast.enet_coordinate_descent(\n",
-      "/Users/ceciliabarnes/opt/anaconda3/envs/direct_cnn/lib/python3.8/site-packages/sklearn/linear_model/_coordinate_descent.py:529: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations. Duality gap: 1.0383573016467385, tolerance: 0.988109677419355\n",
+      "/Users/ceciliabarnes/opt/anaconda3/envs/direct_cnn/lib/python3.8/site-packages/sklearn/linear_model/_coordinate_descent.py:529: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations. Duality gap: 1.2340466376931083, tolerance: 0.809095652173913\n",
       "  model = cd_fast.enet_coordinate_descent(\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.939094764074263"
+       "0.15653011665444183"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "pipeline = Pipeline([('impute', SimpleImputer(strategy='median')),('estimator', LassoCV(n_alphas=5))])\n",
-    "pipeline.fit(X, y)\n",
-    "pipeline.score(X, y)"
+    "pipeline.fit(X_train, y_train)\n",
+    "pipeline.score(X_test, y_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "dietary-structure",
+   "execution_count": 11,
+   "id": "spiritual-testament",
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +453,7 @@
        "array([-0.32016338,  0.01782182, -2.92530516, -0.5624851 , -0.0597728 ])"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -453,7 +464,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "naughty-story",
+   "id": "comparable-strength",
    "metadata": {},
    "source": [
     "### Random Forest"
@@ -461,48 +472,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "encouraging-elements",
+   "execution_count": 26,
+   "id": "accepting-launch",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.987012987012987"
+       "0.8850115413449028"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pipeline = Pipeline([('impute', SimpleImputer(strategy='median')),('estimator', RandomForestClassifier(n_estimators=10))])\n",
+    "pipeline = Pipeline([('impute', SimpleImputer(strategy='median')),('estimator', RandomForestRegressor(n_estimators=10))])\n",
     "pipeline.fit(X, y)\n",
     "pipeline.score(X, y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "structured-scope",
+   "execution_count": 27,
+   "id": "generous-semiconductor",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/ceciliabarnes/opt/anaconda3/envs/direct_cnn/lib/python3.8/site-packages/sklearn/model_selection/_split.py:670: UserWarning: The least populated class in y has only 1 members, which is less than n_splits=5.\n",
-      "  warnings.warn((\"The least populated class in y has only %d\"\n"
-     ]
-    },
+     "data": {
+      "text/plain": [
+       "array([-0.02170353,  0.33872675, -0.28138743, -0.5063403 , -0.13513763])"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cross_val_score(pipeline, X, y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "congressional-tension",
+   "metadata": {},
+   "source": [
+    "### Adaboost"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "historic-adaptation",
+   "metadata": {},
+   "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.1875    , 0.125     , 0.06666667, 0.13333333, 0.2       ])"
+       "0.98687002029435"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pipeline = Pipeline([('impute', SimpleImputer(strategy='median')),('estimator', AdaBoostRegressor())])\n",
+    "pipeline.fit(X, y)\n",
+    "pipeline.score(X, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "disturbed-philippines",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-1.96236055,  0.52854271, -1.26871827, -0.69832751, -0.18904504])"
+      ]
+     },
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -514,7 +569,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "lucky-tactics",
+   "id": "periodic-recall",
    "metadata": {},
    "outputs": [],
    "source": []
